fix: text alignment

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ main p{
 
 #leet-output{
     width: 100%;
+    text-align: left;
     min-height: 15vh;
     background-color: white;
     color: var(--secondary-color);
